force-app/main/default/objects/Brag__c/Brag__c.object-meta.xml
<CustomObject>
    <label>Brag</label>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Brag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>