force-app/main/default/objects/Brag__c/fields/Technical_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complexity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Technical Complexity</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>