force-app/main/default/objects/Brag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Technical_Complexity__c</columns>
    <columns>Business_Impact__c</columns>
    <columns>Date_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>